# f1-insight-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: task-executor.md
.claude/commands/: auto-tasks.md  next-task.md  task-status.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  images.py  news.py  router.py  schedule.py  search.py  teams.py
backend/app/core/: alerts.py  config.py  database.py  elasticsearch.py  logging.py
backend/app/llm/: __init__.py  glossary.py  models.py  ollama_client.py  openai_client.py  pipeline.py  prompts.py  service.py  summarizer.py  tagger.py  translator.py
backend/app/models/: __init__.py  article.py  master_data.py  schedule.py  team.py  transcript.py
backend/app/scheduler/: __init__.py  models.py  service.py
backend/app/scraper/: __init__.py  dedup.py  http_client.py  service.py
backend/app/scraper/parsers/: __init__.py  autosport.py  base.py  formula1.py  the_race.py
backend/app/scraper/rss/: __init__.py  parser.py  service.py  sources.py
backend/app/scraper/transcript/: __init__.py  pdf_downloader.py  pdf_parser.py  service.py  speaker_parser.py
backend/app/services/: db_indexes.py  es_indexer.py  es_indexes.py  es_search.py  fastf1_client.py  repository.py  schedule.py  schedule_data_2026.py  sync.py  sync_models.py  unsplash.py
docs/: project-overview.md
docs/plan/: tasks.md  todo.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+26 files in other folders)
